[gd_scene load_steps=4 format=3 uid="uid://hq1vs214x24x"]

[ext_resource type="Script" path="res://HUD.gd" id="1_iaixn"]
[ext_resource type="FontFile" uid="uid://dsp37620k1p8v" path="res://fonts/xolonium-regular.ttf" id="2_88x8o"]

[sub_resource type="FontVariation" id="FontVariation_8b112"]
base_font = ExtResource("2_88x8o")

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_iaixn")

[node name="Score" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -400.0
offset_right = 400.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_fonts/font = SubResource("FontVariation_8b112")
theme_override_font_sizes/font_size = 80
text = "0"
horizontal_alignment = 1
autowrap_mode = 3

[node name="MessageLabel" type="Label" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -100.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("FontVariation_8b112")
theme_override_font_sizes/font_size = 85
text = "Dodge the creeps"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Button" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.629
anchor_right = 0.5
anchor_bottom = 0.629
offset_left = -160.0
offset_top = -80.6
offset_right = 160.0
offset_bottom = 79.4
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("FontVariation_8b112")
theme_override_font_sizes/font_size = 80
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
